<resources>
    <string name="app_name">Sports Manager</string>
    <string name="map">Map</string>
    <string name="user_name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up</string>
    <string name="events">Events</string>
    <string name="event">Event: </string>
    <string name="add_event">Add Event</string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="sport">Sport</string>
    <string name="details">Details</string>
    <string name="events_near_you">Events near you</string>
    <string name="profile">Profile</string>
    <string name="event_name">Event name: </string>
    <string name="event_date">Event date: </string>
    <string name="event_time">Event time: </string>
    <string name="add_photo">Add photo </string>
    <string name="take_picture">Take picture</string>
    <string name="choose_picture">Choose from gallery</string>
    <string name="cancel">Cancel </string>
    <string name="logout">Logout </string>

    <string-array name="sports">
        <item>Basketball</item>
        <item>Football</item>
        <item>Handball</item>
    </string-array>

</resources>